--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,9 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 186 -
+[2007/03/22] - A careless mistake : Forgot commit file AreaLoopEvents.pas
+
 - Rev 185 -
 [2007/03/22] - Aeomin - Now able to show other characters ingame.
 [2007/03/21] - Aeomin - Fixed direction being opposite (Should be counter-clockwise).
