--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,17 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 196 -
+[2007/03/26] RaX - Notes/Overview : another sub commit of the massive database changes about
+ to occur...
+[2007/03/26] RaX - Changed TThreadLink into a parent class with a TDatabase Databaselink as
+ it's only property, it also has a constructor and destructor which create + free it.
+[2007/03/26] RaX - The other links (CharaServerLink, ZoneServerLink) are descendants of
+ TThreadLink as well as a new TClientLink which is what TThreadLink used to be.
+[2007/03/26] RaX - Made each inherit the constructors, each also has a destructor which
+ checks and frees the links of they're created.
+-
+
 - Rev 195 -
 [2007/03/26] RaX - Notes/Overview : Made accounts + characters linked to the client from
  themselves through ClientInfo rather than just through the tthreadlink.
