--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 198 -
+[2007/03/26] RaX - Notes/Overview : Character Server now uses local database connections.
+[2007/03/26] RaX - Changed all ADatabase uses in CharacterServer.pas to TThreadLink calls.
+-
+
 - Rev 197 -
 [2007/03/26] RaX - Notes/Overview : Login server is now using local connections.
 [2007/03/26] RaX - Changed all ADatabase uses in LoginServer.pas to TThreadLink calls.
